// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label"
    >
      Label
    </label>
  </div>
</body>
`;

exports[`renders Disabled without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label--disabled rcx-label"
    >
      Label
    </label>
  </div>
</body>
`;

exports[`renders Info without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label"
    >
      Label
      <span
        class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
      >
        <span
          hidden=""
        >
          this is a label info
        </span>
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
          title="this is a label info"
        >
          
        </i>
      </span>
    </label>
  </div>
</body>
`;

exports[`renders InfoRequired without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label"
    >
      Label
      <span
        class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
      >
        <span
          hidden=""
        >
          this is a label info
        </span>
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
          title="this is a label info"
        >
          
        </i>
      </span>
      <span
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
      >
        *
      </span>
    </label>
  </div>
</body>
`;

exports[`renders Required without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label"
    >
      Label
      <span
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
      >
        *
      </span>
    </label>
  </div>
</body>
`;
